--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-barcode": "^1.4.0",
     "react-component-export-image": "^1.0.5",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
