--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-barcode": "^1.4.0",
+    "react-bootstrap": "^1.6.0",
+    "react-bootstrap-time-picker": "^2.0.1",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
