--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-to-print": "^2.12.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^10.15.5",
     "web-vitals": "^1.1.0",
